--- a/app/globals.css
+++ b/app/globals.css
@@ -144,7 +144,7 @@ ul {
 }
 
 .news-article img {
-  width: 25rem;
+  width: 7rem;
   margin-bottom: 1rem;
   border-radius: 4px;
 }
@@ -192,4 +192,14 @@ ul {
 .error {
   text-align: center;
   margin-top: 3rem;
+}
+
+.fullscreen-image {
+  width: 100%;
+}
+
+.fullscreen-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
